metadata/objects/Book_Copy__c.object
<CustomObject>
    <fields>
        <fullName>Availability__c</fullName>
        <defaultValue>&quot;Available&quot;</defaultValue>
        <label>Availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Book__c</fullName>
        <label>Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Book Copies</relationshipLabel>
        <relationshipName>Book_Copies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expected_Return_Day__c</fullName>
        <label>Expected Return Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lent_Date__c</fullName>
        <label>Lent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Mind</fullName>
                </value>
                <value>
                    <fullName>Worn</fullName>
                </value>
                <value>
                    <fullName>Unusable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Book Copy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BookCopyID-{0000}</displayFormat>
        <label>Book Copy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book Copies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>